--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -143,18 +143,52 @@
                     </button>
                   </div>
                   <div class="dropdown__body invite-employee-dropdown__body">
-                    <div class="invite-employee-dropdown__links">
-                      <div class="invite-employee-dropdown__link">
-                        <div class="invite-employee-dropdown__link-title">Name of this link</div>
-                        <div class="invite-employee-dropdown__link-input-wrap">
+                    <div class="invite-employee-dropdown__items">
+                      <div class="invite-employee-dropdown__item">
+                        <input class="input input--white invite-employee-dropdown__item-name" value="Name of this link" />
+                        <div class="invite-employee-dropdown__item-input-wrap">
                           <div class="input-group input-group--absolute">
-                            <input class="input input--alabaster input-group__input invite-employee-dropdown__link-input" value="vertimukaraliai.lt/officeworker-registration" />
-                            <div class="input-group__append">
-                              <p>Copy</p>
+                            <input class="input input--border-alto input-group__input invite-employee-dropdown__link-input" value="vertimukaraliai.lt/officeworker-registration" />
+                            <div class="input-group__append-absolute">
+                              <button class="button button--inline button--color-surfie-green" type="button">Copy
+                              </button>
                             </div>
                           </div>
                         </div>
+                        <div class="invite-employee-dropdown__item-remove">
+                          <div class="close">
+                            <svg class="svg-icon svg-icon--brick-red" width="14" height="14">
+                              <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
+                            </svg>
+                          </div>
+                        </div>
                       </div>
+                      <div class="invite-employee-dropdown__item">
+                        <input class="input input--white invite-employee-dropdown__item-name" value="Name of this link" />
+                        <div class="invite-employee-dropdown__item-input-wrap">
+                          <div class="input-group input-group--absolute">
+                            <input class="input input--border-alto input-group__input invite-employee-dropdown__link-input" value="vertimukaraliai.lt/officeworker-registration" />
+                            <div class="input-group__append-absolute">
+                              <button class="button button--inline button--color-surfie-green" type="button">Copy
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="invite-employee-dropdown__item-remove">
+                          <div class="close">
+                            <svg class="svg-icon svg-icon--brick-red" width="14" height="14">
+                              <use href="images/svg/svg-sprite/symbol/sprite.svg#close" x="0" y="0"></use>
+                            </svg>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="invite-employee-dropdown__button">
+                      <button class="button button--surfie-green" type="button"><span>Add new link</span>
+                        <svg class="svg-icon svg-icon--white button__icon" width="10" height="10">
+                          <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
+                        </svg>
+                      </button>
                     </div>
                   </div>
                 </div>
